out/old/manifests/argocd/NetworkPolicy.argocd-redis-network-policy.yaml
metadata:
  name: argocd-redis-network-policy
  namespace: argocd
  labels:
    app.kubernetes.io/instance: argocd
  annotations: {}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  ingress:
  - ports:
    - protocol: TCP
      port: 6379
    from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-repo-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
apiVersion: <DOMAIN_775>/v1
kind: NetworkPolicy
